--- a/index.html
+++ b/index.html
@@ -72,6 +72,15 @@
           <h2 class="visually-hidden">Advantages</h2>
           <ul class="advantages-list">
             <li class="advantages-list-item">
+              <div class="container-item-icons">
+                <svg class="advantages-list-icons">
+                  <use
+                    href="./images/icons/icons.svg#icon-antenna-1"
+                    width="64"
+                    height="64"
+                  ></use>
+                </svg>
+              </div>
               <h3 class="advantages-list-title">Strategy</h3>
               <p class="advantages-list-text">
                 Our goal is to identify the business problem to walk away with
@@ -79,6 +88,15 @@
               </p>
             </li>
             <li class="advantages-list-item">
+              <div class="container-item-icons">
+                <svg class="advantages-list-icons">
+                  <use
+                    href="./images/icons/icons.svg#icon-clock-1"
+                    width="64"
+                    height="64"
+                  ></use>
+                </svg>
+              </div>
               <h3 class="advantages-list-title">Punctuality</h3>
               <p class="advantages-list-text">
                 Bring the key message to the brand's audience for the best price
@@ -86,6 +104,15 @@
               </p>
             </li>
             <li class="advantages-list-item">
+              <div class="container-item-icons">
+                <svg class="advantages-list-icons">
+                  <use
+                    href="./images/icons/icons.svg#icon-diagram-1"
+                    width="64"
+                    height="64"
+                  ></use>
+                </svg>
+              </div>
               <h3 class="advantages-list-title">Diligence</h3>
               <p class="advantages-list-text">
                 Research and confirm brands that present the strongest digital
@@ -93,6 +120,15 @@
               </p>
             </li>
             <li class="advantages-list-item">
+              <div class="container-item-icons">
+                <svg class="advantages-list-icons">
+                  <use
+                    href="./images/icons/icons.svg#icon-astronaut-1"
+                    width="64"
+                    height="64"
+                  ></use>
+                </svg>
+              </div>
               <h3 class="advantages-list-title">Technologies</h3>
               <p class="advantages-list-text">
                 Design practice focused on digital experiences. We bring forth a
