--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           >
           <ul class="header-list">
             <li class="header-list-item">
-              <a href="./index.html" class="header-link">Studio</a>
+              <a href="./index.html" class="header-link current">Studio</a>
             </li>
             <li class="header-list-item">
               <a href="" class="header-link">Portfolio</a>
@@ -148,6 +148,44 @@
               <div class="container-list-team">
                 <h3 class="team-list-item-title">Mark Guerrero</h3>
                 <p class="team-list-item-text">Product Designer</p>
+                <ul class="team-list-icons">
+                  <li class="team-list-icons-item">
+                    <a href="" class="team-list-icon-item-link">
+                      <svg class="icon" width="16" height="16">
+                        <use
+                          href="./images/icons/icons.svg#icon-instagram-2"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-list-icons-item">
+                    <a href="" class="team-list-icon-item-link">
+                      <svg class="icon" width="16" height="16">
+                        <use
+                          href="./images/icons/icons.svg#icon-twitter-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-list-icons-item">
+                    <a href="" class="team-list-icon-item-link">
+                      <svg class="icon" width="16" height="16">
+                        <use
+                          href="./images/icons/icons.svg#icon-facebook-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-list-icons-item">
+                    <a href="" class="team-list-icon-item-link">
+                      <svg class="icon" width="16" height="16">
+                        <use
+                          href="./images/icons/icons.svg#icon-linkedin-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list-item">
@@ -155,6 +193,44 @@
               <div class="container-list-team">
                 <h3 class="team-list-item-title">Tom Ford</h3>
                 <p class="team-list-item-text">Frontend Developer</p>
+                <ul class="team-list-icons">
+                  <li class="team-list-icons-item">
+                    <a href="" class="team-list-icon-item-link">
+                      <svg class="icon" width="16" height="16">
+                        <use
+                          href="./images/icons/icons.svg#icon-instagram-2"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-list-icons-item">
+                    <a href="" class="team-list-icon-item-link">
+                      <svg class="icon" width="16" height="16">
+                        <use
+                          href="./images/icons/icons.svg#icon-twitter-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-list-icons-item">
+                    <a href="" class="team-list-icon-item-link">
+                      <svg class="icon" width="16" height="16">
+                        <use
+                          href="./images/icons/icons.svg#icon-facebook-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-list-icons-item">
+                    <a href="" class="team-list-icon-item-link">
+                      <svg class="icon" width="16" height="16">
+                        <use
+                          href="./images/icons/icons.svg#icon-linkedin-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list-item">
@@ -162,6 +238,44 @@
               <div class="container-list-team">
                 <h3 class="team-list-item-title">Camila Garcia</h3>
                 <p class="team-list-item-text">Marketing</p>
+                <ul class="team-list-icons">
+                  <li class="team-list-icons-item">
+                    <a href="" class="team-list-icon-item-link">
+                      <svg class="icon" width="16" height="16">
+                        <use
+                          href="./images/icons/icons.svg#icon-instagram-2"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-list-icons-item">
+                    <a href="" class="team-list-icon-item-link">
+                      <svg class="icon" width="16" height="16">
+                        <use
+                          href="./images/icons/icons.svg#icon-twitter-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-list-icons-item">
+                    <a href="" class="team-list-icon-item-link">
+                      <svg class="icon" width="16" height="16">
+                        <use
+                          href="./images/icons/icons.svg#icon-facebook-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-list-icons-item">
+                    <a href="" class="team-list-icon-item-link">
+                      <svg class="icon" width="16" height="16">
+                        <use
+                          href="./images/icons/icons.svg#icon-linkedin-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list-item">
@@ -169,6 +283,44 @@
               <div class="container-list-team">
                 <h3 class="team-list-item-title">Daniel Wilson</h3>
                 <p class="team-list-item-text">UI Designer</p>
+                <ul class="team-list-icons">
+                  <li class="team-list-icons-item">
+                    <a href="" class="team-list-icon-item-link">
+                      <svg class="icon" width="16" height="16">
+                        <use
+                          href="./images/icons/icons.svg#icon-instagram-2"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-list-icons-item">
+                    <a href="" class="team-list-icon-item-link">
+                      <svg class="icon" width="16" height="16">
+                        <use
+                          href="./images/icons/icons.svg#icon-twitter-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-list-icons-item">
+                    <a href="" class="team-list-icon-item-link">
+                      <svg class="icon" width="16" height="16">
+                        <use
+                          href="./images/icons/icons.svg#icon-facebook-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-list-icons-item">
+                    <a href="" class="team-list-icon-item-link">
+                      <svg class="icon" width="16" height="16">
+                        <use
+                          href="./images/icons/icons.svg#icon-linkedin-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -192,11 +344,20 @@
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                src="./images/cashless-payment.jpg"
-                alt="cashless-payment"
-                width="360"
-              />
+              <div class="container-item-img">
+                <img
+                  src="./images/cashless-payment.jpg"
+                  alt="cashless-payment"
+                  width="360"
+                />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="container-list-portfolio">
                 <h3 class="portfolio-list-item-title">Cashless Payment</h3>
                 <p class="portfolio-list-item-text">Marketing</p>
@@ -253,13 +414,48 @@
 
     <footer class="footer">
       <div class="container footer-container">
-        <a href="./index.html" class="logo footer-logo"
-          >Web<span class="logo-text-footer">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div class="container-content">
+          <a href="./index.html" class="logo footer-logo"
+            >Web<span class="logo-text-footer">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="container-footer-social-media">
+          <p class="footer-list-title">Social media</p>
+          <ul class="footer-list-icons">
+            <li class="footer-list-icons-item">
+              <a href="" class="footer-list-icon-item-link">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons/icons.svg#icon-instagram-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-list-icons-item">
+              <a href="" class="footer-list-icon-item-link">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons/icons.svg#icon-twitter-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-list-icons-item">
+              <a href="" class="footer-list-icon-item-link">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons/icons.svg#icon-facebook-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-list-icons-item">
+              <a href="" class="footer-list-icon-item-link">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons/icons.svg#icon-linkedin-1"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
