--- a/index.html
+++ b/index.html
@@ -73,12 +73,8 @@
           <ul class="advantages-list">
             <li class="advantages-list-item">
               <div class="container-item-icons">
-                <svg class="advantages-list-icons">
-                  <use
-                    href="./images/icons/icons.svg#icon-antenna-1"
-                    width="64"
-                    height="64"
-                  ></use>
+                <svg class="advantages-list-icons" width="64" height="64">
+                  <use href="./images/icons/icons.svg#icon-antenna-1"></use>
                 </svg>
               </div>
               <h3 class="advantages-list-title">Strategy</h3>
@@ -89,12 +85,8 @@
             </li>
             <li class="advantages-list-item">
               <div class="container-item-icons">
-                <svg class="advantages-list-icons">
-                  <use
-                    href="./images/icons/icons.svg#icon-clock-1"
-                    width="64"
-                    height="64"
-                  ></use>
+                <svg class="advantages-list-icons" width="64" height="64">
+                  <use href="./images/icons/icons.svg#icon-clock-1"></use>
                 </svg>
               </div>
               <h3 class="advantages-list-title">Punctuality</h3>
@@ -105,12 +97,8 @@
             </li>
             <li class="advantages-list-item">
               <div class="container-item-icons">
-                <svg class="advantages-list-icons">
-                  <use
-                    href="./images/icons/icons.svg#icon-diagram-1"
-                    width="64"
-                    height="64"
-                  ></use>
+                <svg class="advantages-list-icons" width="64" height="64">
+                  <use href="./images/icons/icons.svg#icon-diagram-1"></use>
                 </svg>
               </div>
               <h3 class="advantages-list-title">Diligence</h3>
@@ -121,12 +109,8 @@
             </li>
             <li class="advantages-list-item">
               <div class="container-item-icons">
-                <svg class="advantages-list-icons">
-                  <use
-                    href="./images/icons/icons.svg#icon-astronaut-1"
-                    width="64"
-                    height="64"
-                  ></use>
+                <svg class="advantages-list-icons" width="64" height="64">
+                  <use href="./images/icons/icons.svg#icon-astronaut-1"></use>
                 </svg>
               </div>
               <h3 class="advantages-list-title">Technologies</h3>
@@ -152,36 +136,28 @@
                   <li class="team-list-icons-item">
                     <a href="" class="team-list-icon-item-link">
                       <svg class="icon" width="16" height="16">
-                        <use
-                          href="./images/icons/icons.svg#icon-instagram-2"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-list-icons-item">
                     <a href="" class="team-list-icon-item-link">
                       <svg class="icon" width="16" height="16">
-                        <use
-                          href="./images/icons/icons.svg#icon-twitter-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-list-icons-item">
                     <a href="" class="team-list-icon-item-link">
                       <svg class="icon" width="16" height="16">
-                        <use
-                          href="./images/icons/icons.svg#icon-facebook-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-list-icons-item">
                     <a href="" class="team-list-icon-item-link">
                       <svg class="icon" width="16" height="16">
-                        <use
-                          href="./images/icons/icons.svg#icon-linkedin-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -197,36 +173,28 @@
                   <li class="team-list-icons-item">
                     <a href="" class="team-list-icon-item-link">
                       <svg class="icon" width="16" height="16">
-                        <use
-                          href="./images/icons/icons.svg#icon-instagram-2"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-list-icons-item">
                     <a href="" class="team-list-icon-item-link">
                       <svg class="icon" width="16" height="16">
-                        <use
-                          href="./images/icons/icons.svg#icon-twitter-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-list-icons-item">
                     <a href="" class="team-list-icon-item-link">
                       <svg class="icon" width="16" height="16">
-                        <use
-                          href="./images/icons/icons.svg#icon-facebook-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-list-icons-item">
                     <a href="" class="team-list-icon-item-link">
                       <svg class="icon" width="16" height="16">
-                        <use
-                          href="./images/icons/icons.svg#icon-linkedin-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -242,36 +210,28 @@
                   <li class="team-list-icons-item">
                     <a href="" class="team-list-icon-item-link">
                       <svg class="icon" width="16" height="16">
-                        <use
-                          href="./images/icons/icons.svg#icon-instagram-2"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-list-icons-item">
                     <a href="" class="team-list-icon-item-link">
                       <svg class="icon" width="16" height="16">
-                        <use
-                          href="./images/icons/icons.svg#icon-twitter-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-list-icons-item">
                     <a href="" class="team-list-icon-item-link">
                       <svg class="icon" width="16" height="16">
-                        <use
-                          href="./images/icons/icons.svg#icon-facebook-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-list-icons-item">
                     <a href="" class="team-list-icon-item-link">
                       <svg class="icon" width="16" height="16">
-                        <use
-                          href="./images/icons/icons.svg#icon-linkedin-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -287,36 +247,28 @@
                   <li class="team-list-icons-item">
                     <a href="" class="team-list-icon-item-link">
                       <svg class="icon" width="16" height="16">
-                        <use
-                          href="./images/icons/icons.svg#icon-instagram-2"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-list-icons-item">
                     <a href="" class="team-list-icon-item-link">
                       <svg class="icon" width="16" height="16">
-                        <use
-                          href="./images/icons/icons.svg#icon-twitter-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-list-icons-item">
                     <a href="" class="team-list-icon-item-link">
                       <svg class="icon" width="16" height="16">
-                        <use
-                          href="./images/icons/icons.svg#icon-facebook-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-list-icons-item">
                     <a href="" class="team-list-icon-item-link">
                       <svg class="icon" width="16" height="16">
-                        <use
-                          href="./images/icons/icons.svg#icon-linkedin-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -333,11 +285,20 @@
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-list-item">
-              <img
-                src="./images/banking-app.jpg"
-                alt="banking-app"
-                width="360"
-              />
+              <div class="container-item-img">
+                <img
+                  src="./images/banking-app.jpg"
+                  alt="cashless-payment"
+                  width="360"
+                />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="container-list-portfolio">
                 <h3 class="portfolio-list-item-title">Banking App</h3>
                 <p class="portfolio-list-item-text">App</p>
@@ -364,44 +325,80 @@
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                src="./images/meditation-app.jpg"
-                alt="meditation-app"
-                width="360"
-              />
+              <div class="container-item-img">
+                <img
+                  src="./images/meditation-app.jpg"
+                  alt="cashless-payment"
+                  width="360"
+                />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="container-list-portfolio">
                 <h3 class="portfolio-list-item-title">Meditation App</h3>
                 <p class="portfolio-list-item-text">App</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                src="./images/taxi-service.jpg"
-                alt="taxi-service"
-                width="360"
-              />
+              <div class="container-item-img">
+                <img
+                  src="./images/taxi-service.jpg"
+                  alt="cashless-payment"
+                  width="360"
+                />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="container-list-portfolio">
                 <h3 class="portfolio-list-item-title">Taxi Service</h3>
                 <p class="portfolio-list-item-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                src="./images/screen-illustrations.jpg"
-                alt="screen-illustrations"
-                width="360"
-              />
+              <div class="container-item-img">
+                <img
+                  src="./images/screen-illustrations.jpg"
+                  alt="cashless-payment"
+                  width="360"
+                />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="container-list-portfolio">
                 <h3 class="portfolio-list-item-title">Screen Illustrations</h3>
                 <p class="portfolio-list-item-text">Design</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                src="./images/online-courses.jpg"
-                alt="online-courses"
-                width="360"
-              />
+              <div class="container-item-img">
+                <img
+                  src="./images/online-courses.jpg"
+                  alt="cashless-payment"
+                  width="360"
+                />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="container-list-portfolio">
                 <h3 class="portfolio-list-item-title">Online Courses</h3>
                 <p class="portfolio-list-item-text">Marketing</p>
@@ -429,28 +426,28 @@
             <li class="footer-list-icons-item">
               <a href="" class="footer-list-icon-item-link">
                 <svg class="footer-icon" width="24" height="24">
-                  <use href="./images/icons/icons.svg#icon-instagram-2"></use>
+                  <use href="./images/icons.svg#icon-instagram-2"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-list-icons-item">
               <a href="" class="footer-list-icon-item-link">
                 <svg class="footer-icon" width="24" height="24">
-                  <use href="./images/icons/icons.svg#icon-twitter-1"></use>
+                  <use href="./images/icons.svg#icon-twitter-1"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-list-icons-item">
               <a href="" class="footer-list-icon-item-link">
                 <svg class="footer-icon" width="24" height="24">
-                  <use href="./images/icons/icons.svg#icon-facebook-1"></use>
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-list-icons-item">
               <a href="" class="footer-list-icon-item-link">
                 <svg class="footer-icon" width="24" height="24">
-                  <use href="./images/icons/icons.svg#icon-linkedin-1"></use>
+                  <use href="./images/icons.svg#icon-linkedin-1"></use>
                 </svg>
               </a>
             </li>
