--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <li class="advantages-list-item">
               <div class="container-item-icons">
                 <svg class="advantages-list-icons" width="64" height="64">
-                  <use href="./images/icons/icons.svg#icon-antenna-1"></use>
+                  <use href="./images/icons.svg#icon-antenna-1"></use>
                 </svg>
               </div>
               <h3 class="advantages-list-title">Strategy</h3>
@@ -86,7 +86,7 @@
             <li class="advantages-list-item">
               <div class="container-item-icons">
                 <svg class="advantages-list-icons" width="64" height="64">
-                  <use href="./images/icons/icons.svg#icon-clock-1"></use>
+                  <use href="./images/icons.svg#icon-clock-1"></use>
                 </svg>
               </div>
               <h3 class="advantages-list-title">Punctuality</h3>
@@ -98,7 +98,7 @@
             <li class="advantages-list-item">
               <div class="container-item-icons">
                 <svg class="advantages-list-icons" width="64" height="64">
-                  <use href="./images/icons/icons.svg#icon-diagram-1"></use>
+                  <use href="./images/icons.svg#icon-diagram-1"></use>
                 </svg>
               </div>
               <h3 class="advantages-list-title">Diligence</h3>
@@ -110,7 +110,7 @@
             <li class="advantages-list-item">
               <div class="container-item-icons">
                 <svg class="advantages-list-icons" width="64" height="64">
-                  <use href="./images/icons/icons.svg#icon-astronaut-1"></use>
+                  <use href="./images/icons.svg#icon-astronaut-1"></use>
                 </svg>
               </div>
               <h3 class="advantages-list-title">Technologies</h3>
