--- a/index.html
+++ b/index.html
@@ -291,13 +291,11 @@
                   alt="cashless-payment"
                   width="360"
                 />
-                <div class="overlay">
-                  <p class="overlay-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="container-list-portfolio">
                 <h3 class="portfolio-list-item-title">Banking App</h3>
@@ -311,13 +309,11 @@
                   alt="cashless-payment"
                   width="360"
                 />
-                <div class="overlay">
-                  <p class="overlay-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="container-list-portfolio">
                 <h3 class="portfolio-list-item-title">Cashless Payment</h3>
@@ -331,13 +327,11 @@
                   alt="cashless-payment"
                   width="360"
                 />
-                <div class="overlay">
-                  <p class="overlay-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="container-list-portfolio">
                 <h3 class="portfolio-list-item-title">Meditation App</h3>
@@ -351,13 +345,11 @@
                   alt="cashless-payment"
                   width="360"
                 />
-                <div class="overlay">
-                  <p class="overlay-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="container-list-portfolio">
                 <h3 class="portfolio-list-item-title">Taxi Service</h3>
@@ -371,13 +363,11 @@
                   alt="cashless-payment"
                   width="360"
                 />
-                <div class="overlay">
-                  <p class="overlay-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="container-list-portfolio">
                 <h3 class="portfolio-list-item-title">Screen Illustrations</h3>
@@ -391,13 +381,11 @@
                   alt="cashless-payment"
                   width="360"
                 />
-                <div class="overlay">
-                  <p class="overlay-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="container-list-portfolio">
                 <h3 class="portfolio-list-item-title">Online Courses</h3>
